# hw-nibble-zero

./: .gitignore  INTERNALS.md  README.md  straddle.yaml
esp-idf/: CMakeLists.txt
esp-idf/include/: nibblezero.h
esp-idf/src/: nibblezero.cpp
